--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^5.10.0",
     "axios": "^1.6.2",
     "firebase": "^10.7.0",
@@ -28,6 +30,7 @@
     "react-router-dom": "^6.20.0",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
+    "stripe": "^14.7.0",
     "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
