--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-parallax": "^3.5.1",
+    "react-rating": "^2.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.20.0",
     "react-tabs": "^6.0.2",
